# unarch

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: release.yml
archex/: __init__.py  __main__.py  core.py  rar.py  sevenz.py  tar.py  zip.py
archive_extractor/: __init__.py  __main__.py  core.py  rar.py  sevenz.py  tar.py  zip.py
tests/: conftest.py  test_api.py  test_cli.py  test_compressed.py  test_core.py  test_rar.py  test_security.py  test_sevenz.py  test_tar.py  test_zip.py
unarch/: __init__.py  __main__.py  compressed.py  core.py  rar.py  sevenz.py  tar.py  zip.py
