[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "archive-extractor"
version = "0.4.0"
description = "Recursively extract ZIP, 7z, tar, and RAR archives from directory trees, with password list support"
authors = [
    { name = "Tiago Silva", email = "eng.tiago.silva@gmail.com" }
]
license = "MIT"
readme = "README.md"
dependencies = [
    "rich>=13.0",
    "rich-argparse>=1.4",
    "py7zr",
    "rarfile",
]
requires-python = ">=3.10"
keywords = ["archive", "extract", "zip", "7z", "tar", "rar", "recursive", "password", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Archiving",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/tsilva/archive-extractor"
Repository = "https://github.com/tsilva/archive-extractor"
Issues = "https://github.com/tsilva/archive-extractor/issues"

[project.scripts]
archive-extractor = "archive_extractor:main"

[dependency-groups]
dev = ["pytest>=8.0"]
